fix(barrels) - barrels já estão a funcionar corretamente